--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <head>
   <meta charset="utf-8">
-  <title>MeetingFrontend</title>
+  <title>Meetings</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
